# multimedia_audio_framework

./: 0001-volume-change-callback.patch  BUILD.gn  L2 audio_standard 服务启动流程走读.md  OAT.xml  README.md  README_zh.md  Session.vim  audio_framework.versionscript  audio_ohcore.gni  bundle.json  cfi_blocklist.txt  config.gni  hisysevent.yaml  media_monitor_path.gni  multimedia_aafwk.gni  ohos.build  ressche_part.gni  sensor.gni  tttt
frameworks/innerkitsimpl/opensl/: BUILD.gn
frameworks/innerkitsimpl/opensl/include/: OpenSLES.h  all_itf.h  audioplayer_adapter.h  builder.h  class_struct.h  common.h  itf_struct.h  mapper.h  table_struct.h
frameworks/innerkitsimpl/opensl/src/adapter/: audioplayer_adapter.cpp
frameworks/innerkitsimpl/opensl/src/itf/: all_itf.cpp  buffer_queue_itf.cpp  engine_itf.cpp  object_itf.cpp  play_itf.cpp  volume_itf.cpp
frameworks/innerkitsimpl/opensl/src/util/: OpenSLES_IID.c  builder.cpp  class_struct.cpp  sl_entry.cpp  table_struct.cpp
frameworks/native/audioeffect/: BUILD.gn
frameworks/native/audioeffect/include/: audio_effect_chain.h  audio_effect_chain_adapter.h  audio_effect_chain_manager.h  audio_effect_hdi_param.h  audio_effect_volume.h  audio_enhance_chain.h  audio_enhance_chain_adapter.h  audio_enhance_chain_manager.h
frameworks/native/audioeffect/src/: audio_effect_chain.cpp  audio_effect_chain_adapter.c  audio_effect_chain_adapter.cpp  audio_effect_chain_manager.cpp  audio_effect_hdi_param.cpp  audio_effect_rotation.cpp  audio_effect_volume.cpp  audio_enhance_chain.cpp  audio_enhance_chain_adapter.cpp  audio_enhance_chain_manager.cpp  audio_head_tracker.cpp
frameworks/native/hdiadapter/sink/: BUILD.gn
frameworks/native/hdiadapter/sink/bluetooth/: bluetooth_renderer_sink.cpp
frameworks/native/hdiadapter/sink/common/: i_audio_renderer_sink.cpp  i_audio_renderer_sink.h  renderer_sink_adapter.c
frameworks/native/hdiadapter/sink/fast/: fast_audio_renderer_sink.cpp
frameworks/native/hdiadapter/sink/file/: audio_renderer_file_sink.cpp  audio_renderer_file_sink.h
frameworks/native/ohaudio/: BUILD.gn  OHAudio.cpp  OHAudioCapturer.cpp  OHAudioCapturer.h  OHAudioDeviceDescriptor.cpp  OHAudioRenderer.cpp  OHAudioRenderer.h  OHAudioRoutingManager.cpp  OHAudioSessionManager.cpp  OHAudioSessionManager.h  OHAudioStreamBuilder.cpp  OHAudioStreamBuilder.h
frameworks/native/opensles/: BUILD.gn
frameworks/native/opensles/include/: OpenSLES_OpenHarmony.h  audiocapturer_adapter.h  audioplayer_adapter.h  builder.h  common.h  readorwritecallback_adapter.h  table_struct.h
interfaces/innerkits/native/audioopensles/: BUILD.gn
sa_profile/: BUILD.gn
services/audio_service/: BUILD.gn  audio_client.versionscript
services/audio_service/client/config/: audio_algorithm_config.xml
services/audio_service/client/include/: audio_manager_base.h  audio_manager_listener_stub.h  audio_manager_proxy.h  audio_process_in_client.h  audio_service_client.h  audio_spatial_channel_converter.h  audio_timer.h  ipc_stream_proxy.h  policy_provider_stub.h  pulseaudio_ipc_interface_code.h  renderer_in_client_private.h
services/audio_service/client/src/: audio_converter_parser.cpp  audio_device_descriptor.cpp  audio_format_converter_3DA.cpp  audio_group_manager.cpp  audio_info.cpp  audio_manager_listener_stub.cpp  audio_manager_proxy.cpp  audio_process_in_client.cpp  audio_process_proxy.cpp  audio_routing_manager.cpp  audio_sasdk.cpp  audio_service_client.cpp  audio_spatial_channel_converter.cpp  audio_spatialization_manager.cpp  audio_stream.cpp  audio_stream_manager.cpp  audio_stream_tracker.cpp  audio_system_manager.cpp  callback_handler.cpp  capturer_in_client.cpp  fast_audio_stream.cpp  i_audio_stream.cpp  ipc_stream_listener_impl.cpp  ipc_stream_listener_stub.cpp  ipc_stream_proxy.cpp  policy_provider_stub.cpp  renderer_in_client.cpp
services/audio_service/common/include/: i_policy_provider.h  i_process_status_listener.h  ipc_stream.h  linear_pos_time_model.h  oh_audio_buffer.h
services/audio_service/common/src/: audio_common_converter.cpp  audio_down_mix_stereo.cpp  audio_info.cpp  audio_process_config.cpp  audio_resample.cpp  audio_ring_cache.cpp  futex_tool.cpp  linear_pos_time_model.cpp  oh_audio_buffer.cpp  volume_tools.cpp
services/audio_service/etc/: audio_server.cfg  pulseaudio.cfg
services/audio_service/server/include/: audio_effect_server.h  audio_endpoint.h  audio_histen.h  audio_manager_listener_proxy.h  audio_process_in_server.h  audio_server.h  audio_service.h  capturer_in_server.h  i_audio_engine.h  i_capturer_stream.h  i_stream_manager.h  ipc_stream_in_server.h  ipc_stream_stub.h  none_mix_engine.h  pa_adapter_manager.h  pa_capturer_stream_impl.h  pa_renderer_stream_impl.h  policy_handler.h  policy_provider_proxy.h  pro_audio_stream_manager.h  pro_renderer_stream_impl.h  renderer_in_server.h
services/audio_service/server/src/: audio_effect_server.cpp  audio_endpoint.cpp  audio_endpoint_separate.cpp  audio_histen.cpp  audio_manager_listener_proxy.cpp  audio_manager_stub.cpp  audio_process_in_server.cpp  audio_process_stub.cpp  audio_server.cpp  audio_service.cpp  capturer_in_server.cpp  ipc_stream_in_server.cpp  ipc_stream_listener_proxy.cpp  ipc_stream_stub.cpp  none_mix_engine.cpp  pa_adapter_manager.cpp  pa_capturer_stream_impl.cpp  pa_renderer_stream_impl.cpp  policy_handler.cpp  policy_provider_proxy.cpp  pro_audio_stream_manager.cpp  pro_renderer_stream_impl.cpp  renderer_in_server.cpp
services/audio_service/stream/: audio_service_client.cpp
services/audio_service/stream/include/: audio_service_client.h
services/audio_service/test/example/: audio_blendmode_test.cpp  audio_hdi_device_test.cpp  audio_multichannel_test.cpp  audio_process_client_test.cpp  audio_stream_playback_test.cpp  fast_audio_stream_playback_test.cpp  playback_test.cpp  record_test.cpp
services/audio_service/test/unittest/: BUILD.gn  audio_device_descriptor_unit_test.cpp  audio_manager_unit_test.cpp  audio_service_common_unit_test.cpp  audio_service_unit_test.cpp  fast_audio_stream_unit_test.cpp  none_mix_engine_unit_test.cpp  policy_handler_unit_test.cpp
(+958 files in other folders)
