import("//build/ohos.gni")

config("audio_opensles_config") {
  include_dirs = [ 
    "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audioopensles/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/opensles/include"
  ]
}

ohos_executable("audio_opensles_test") {
  install_enable = true

  sources = [ "//foundation/multimedia/audio_standard/services/test/audio_opensles_test.cpp" ]

  configs = [ ":audio_opensles_config" ]

  deps = [ "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/opensles:opensles" ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  part_name = "multimedia_audio_standard"
  subsystem_name = "multimedia"
}